# cnn-cifar10

./: .dvcignore  .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
metrics/exp1_lenet/: eval.json  results.json
metrics/exp2_hybrid/: eval.json  results.json
metrics/exp3_alexnet/: eval.json  results.json
src/: data.py  evaluate.py  layers.py  train.py  utils.py  visualize.py
src/models/: __init__.py  alexnet.py  hybrid.py  lenet.py
