[project]
name = "cnn-cifar10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]

[tool.pyright]
typeCheckingMode = "standard"
